fix error message styling on mobile

--- a/src/pages/_error.module.scss
+++ b/src/pages/_error.module.scss
@@ -10,6 +10,8 @@
 .title {
   font-size: var(--font-size-jumbo);
   margin-bottom: var(--spacing-medium);
+  text-align: center;
+  line-height: normal;
 }
 
 .goBack {
